# Calculator

./: .gitignore  CMakeLists.txt  Calculator.rc  README.md  wxglade_calculator.wxg
.github/workflows/: cmake-multi-platform.yml
src/: ButtonIds.h  ElementIds.h  main.cpp  main.h
src/exprtk/: exprtk.hpp
src/gui/: CalculatorFrame.cpp  CalculatorFrame.h
